--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "eslint": "./node_modules/eslint/bin/eslint.js ./src/*.js"
   },
   "devDependencies": {
-    "eslint": "^5.5.0"
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
+    "eslint": "^5.5.0",
+    "react-test-renderer": "^16.5.0"
   }
 }
